<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/wave_type_spinner"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/spinner_border"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_volume_up_24"
            android:contentDescription="@string/volume" />
        <SeekBar
            android:id="@+id/sg_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <ImageButton
            android:id="@+id/sg_play"
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_primary"
            android:contentDescription="@string/playDescription"
            android:src="@drawable/ic_baseline_play_arrow_24"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
    <LinearLayout
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <com.example.myapplication.SeekWithEdit
            android:id="@+id/sg_freq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/hz"/>
    </LinearLayout>
</LinearLayout>